# editorial-orchestrator

./: .env.example  .gitignore  APP.md  Dockerfile  INSTRUCTIONS.md  Prepping.md  README.md  SPEC.md  docker-compose.yml  pyproject.toml  sample-definitions-block.md  sample-definitions-block.xml
app/: config.py  library.py  main.py  model_client.py  orchestrator.py  schemas.py
app/static/: app.js  style.css
app/templates/: index.html
tests/: test_library.py  test_orchestrator.py
